--- a/usbserial.vcxproj.filters
+++ b/usbserial.vcxproj.filters
@@ -21,6 +21,9 @@
     <ClInclude Include="usbserial_win32.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="rbuff.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="usbserial.c">
@@ -30,6 +33,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="getopt.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="rbuff.c">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
